syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

message UnionCmd {
	bytes body = 14;
	uint32 message_id = 8;
}
